# xp-translator

./: README.md  task.md  开发过程.md
backend/: .env  .env.example  README.md  main.py  pyproject.toml  test_summary.json
backend/src/xp_translator/: __init__.py  api.py  clients.py  main.py  models.py
backend/tests/: __init__.py  all_tests.md  conftest.py  run_tests.py  test_api.py  test_clients.py  test_model_switching.py  test_models.py  test_summary.json
frontend/: README.md  pubspec.yaml
frontend/lib/: config.dart  main.dart
frontend/macos/Runner/: DebugProfile.entitlements  Release.entitlements
frontend/test/: widget_test.dart
